maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:32: error: not found: value murDroit
        else if(!murDroit()){droite()
                 ^